Add virtual threads. Improvement in createInputs but not wall